--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <title>METANIT.COM</title>
 </head>
 <body>
-    hello world
+    <h2>User form</h2>
+    <form method="post" action="user/">
+        {% csrf_token %}
+        <p>Name:<br> <input type="text" name="name" /></p>
+        <p>Age:<br> <input name="age" type="number" /></p>
+        <input type="submit" value="Send" />
+    </form>
 </body>
 </html>
