method post added

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>User form</h2>
-    <form method="post" action="user/">
+    <form method="post" action="">
         {% csrf_token %}
         <p>Name:<br> <input type="text" name="name" /></p>
         <p>Age:<br> <input name="age" type="number" /></p>
