--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -13,7 +13,7 @@
     <title>{% block title %}Title{% endblock %}</title>
   </head>
   <body>
-    {% include 'main/navbar.html' %}
+    {% include './navbar.html' %}
     <!-- places the content of navbar.html here -->
     <div class='content'>
       {% block content %} replace me {% endblock %}
