--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    this web site home page 
-</body>
-</html>
+{% extends './base.html' %} 
+    {% block title %}
+        NetFix
+    {% endblock %}
+
+{% block content %}
+    <div style="margin-top: 50px;">
+        <p class="site_title">NetFix</p>
+        <img class="home_logo" src="static/css/logo.png" alt="logo">
+    </div>
+{% endblock %}
