insert first user

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -6,6 +6,6 @@
 {% block content %}
     <div style="margin-top: 50px;">
         <p class="site_title">NetFix</p>
-        <img class="home_logo" src="static/css/logo.png" alt="logo">
+        <img class="home_logo" src="/static/css/logo.png" alt="logo">
     </div>
 {% endblock %}
